--- a/app/src/main/res/layout/message_layout.xml
+++ b/app/src/main/res/layout/message_layout.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content">
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -27,4 +27,4 @@
             android:id="@+id/sender"/>
     </LinearLayout>
 
-</LinearLayout>
+</RelativeLayout>
