--- a/app/src/main/res/menu/share_menu.xml
+++ b/app/src/main/res/menu/share_menu.xml
@@ -5,5 +5,5 @@
         android:orderInCategory="100"
         android:showAsAction="ifRoom"
         android:icon="@drawable/accept"
-        android:title="Share"/>
+        android:title="Get Location"/>
 </menu>
