--- a/app/src/main/res/layout/add_user_action_bar.xml
+++ b/app/src/main/res/layout/add_user_action_bar.xml
@@ -2,12 +2,12 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/transparent">
+    android:background="@color/android_grey">
 
 
     <ImageView
         android:layout_height="wrap_content"
-        android:layout_width="30dp"
+        android:layout_width="20dp"
         android:src="@drawable/back_arrow"
         android:adjustViewBounds="true"
         android:scaleType="fitXY"
