--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.score.chatz.ui.ChatFragment"
-    android:background="@color/black"
+    android:background="@color/white"
     android:id="@+id/parent_container">
 
     <!--<RelativeLayout
@@ -80,7 +80,6 @@
                 android:layout_height="fill_parent"
                 android:id="@+id/messages_list_view"
                 android:padding="5dp"
-                android:background="@drawable/chat_view_background"
                 android:layout_gravity="top|bottom"></ListView>
 
         </FrameLayout>
@@ -89,7 +88,7 @@
             android:layout_width="match_parent"
             android:layout_height="110dp"
             android:layout_weight="0"
-            android:background="@color/black"
+            android:background="@color/white"
             android:paddingTop="0dp"
             android:paddingLeft="5dp"
             android:paddingRight="5dp"
@@ -99,7 +98,7 @@
                 android:layout_height="match_parent"
                 android:orientation="horizontal"
                 android:padding="5dp"
-                android:background="@drawable/chat_view_background">
+                android:background="@color/android_grey">
                 <EditText
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
@@ -108,7 +107,7 @@
                     android:textColor="@color/white"
                     android:hint="@string/enter_secret_here_hint"
                     android:padding="7dp"
-                    android:id="@+id/text_message"/>
+                    android:id="@+id/text_message" />
                 <FrameLayout
                     android:layout_width="120dp"
                     android:layout_height="match_parent">
