--- a/app/src/main/res/layout/home_active_tab.xml
+++ b/app/src/main/res/layout/home_active_tab.xml
@@ -12,8 +12,8 @@
         android:background="@color/transparent"
         android:layout_gravity="center_horizontal"
         android:gravity="bottom"
-        android:paddingBottom="5dp">
-        <ImageView
+        android:paddingBottom="0dp">
+        <!--<ImageView
             android:layout_height="wrap_content"
             android:layout_width="20dp"
             android:id="@+id/icon"
@@ -21,16 +21,17 @@
             android:adjustViewBounds="true"
             android:scaleType="fitXY"
             android:layout_marginLeft="5dp"
-            android:layout_marginTop="5dp" />
+            android:layout_marginTop="5dp" />-->
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/recent_tab"
+            android:text="@string/home_page_tab_one"
             android:layout_toRightOf="@+id/icon"
             android:allowUndo="false"
             android:layout_centerInParent="true"
             android:layout_marginLeft="10dp"
+            android:paddingTop="12dp"
             android:textSize="15sp"
             android:layout_alignParentBottom="false"
             android:layout_alignBottom="@+id/icon"
