--- a/app/src/main/res/layout/registration_activity.xml
+++ b/app/src/main/res/layout/registration_activity.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.score.chatz.ui.AddUserActivity"
-    android:background="@color/black">
+    android:background="@color/android_grey">
 
     <EditText
         android:layout_width="wrap_content"
@@ -27,7 +27,7 @@
         android:text="@string/register_button_text"
         android:id="@+id/register_btn"
         android:textColor="@color/black"
-        android:background="@color/btn_color"
+        android:background="@color/android_green"
         android:layout_below="@+id/registering_user_id"
         android:layout_alignLeft="@+id/welcome_text"
         android:layout_marginTop="34dp"
