--- a/app/src/main/res/layout/single_user_card_row.xml
+++ b/app/src/main/res/layout/single_user_card_row.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<!--<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -155,4 +155,78 @@
 </LinearLayout>
 
 
-</RelativeLayout>
+</RelativeLayout>-->
+
+
+
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+android:layout_width="match_parent"
+android:layout_height="match_parent"
+    android:orientation="horizontal"
+    android:background="@color/white"
+    android:baselineAligned="false">
+
+<FrameLayout
+    android:layout_width="0dp"
+    android:layout_height="110dp"
+    android:layout_weight="3"
+    android:padding="10dp">
+
+    <com.github.siyamed.shapeimageview.CircularImageView
+        android:layout_width="86dp"
+        android:layout_height="117dp"
+        android:src="@drawable/user"
+        android:layout_gravity="center_horizontal" />
+
+</FrameLayout>
+
+    <RelativeLayout
+        android:layout_width="0dp"
+        android:layout_height="110dp"
+        android:layout_weight="8"
+        android:padding="30dp">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Lakmal"
+            android:id="@+id/user_name"
+            android:layout_centerVertical="true" />
+        <ImageView
+            android:layout_width="20dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/perm_locations"
+            android:layout_toRightOf="@+id/textView8"
+            android:src="@drawable/perm_locations_active"
+            android:adjustViewBounds="true"
+            android:layout_alignTop="@+id/textView8"
+            android:layout_marginLeft="10dp"
+            android:layout_toLeftOf="@+id/perm_camera"
+            android:layout_centerVertical="true" />
+
+        <ImageView
+            android:layout_width="20dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/perm_camera"
+            android:src="@drawable/perm_camera_active"
+            android:adjustViewBounds="true"
+            android:layout_marginLeft="10dp"
+            android:layout_gravity="right"
+            android:layout_alignParentEnd="false"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentStart="false"
+            android:layout_centerVertical="true" />
+
+    </RelativeLayout>
+
+
+
+
+
+
+
+
+
+
+
+</LinearLayout>
