--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -66,21 +66,24 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:background="#3498db">
 
         <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="8"
             android:padding="5dp"
-            android:id="@+id/text_messages_container">
+            android:id="@+id/text_messages_container"
+            android:background="@color/android_grey">
 
             <ListView
                 android:layout_width="match_parent"
                 android:layout_height="fill_parent"
                 android:id="@+id/messages_list_view"
                 android:padding="5dp"
-                android:layout_gravity="top|bottom"></ListView>
+                android:layout_gravity="top|bottom"
+                android:background="#ecf0f1"></ListView>
 
         </FrameLayout>
 
@@ -88,7 +91,7 @@
             android:layout_width="match_parent"
             android:layout_height="110dp"
             android:layout_weight="0"
-            android:background="@color/white"
+            android:background="@color/android_grey"
             android:paddingTop="0dp"
             android:paddingLeft="5dp"
             android:paddingRight="5dp"
@@ -107,7 +110,10 @@
                     android:textColor="@color/white"
                     android:hint="@string/enter_secret_here_hint"
                     android:padding="7dp"
-                    android:id="@+id/text_message" />
+                    android:id="@+id/text_message"
+                    android:background="#000"
+                    android:layout_marginRight="5dp"
+                    android:layout_marginBottom="3dp" />
                 <FrameLayout
                     android:layout_width="120dp"
                     android:layout_height="match_parent">
