--- a/app/src/main/res/layout/single_user_card_row.xml
+++ b/app/src/main/res/layout/single_user_card_row.xml
@@ -218,7 +218,8 @@ android:layout_height="match_parent"
             android:layout_alignParentEnd="true"
             android:layout_alignParentRight="true"
             android:layout_alignParentStart="false"
-            android:layout_centerVertical="true" />
+            android:layout_centerVertical="true"
+            android:layout_marginRight="20dp" />
 
     </RelativeLayout>
 
