--- a/app/src/main/res/layout/rahas_row_layout.xml
+++ b/app/src/main/res/layout/rahas_row_layout.xml
@@ -26,7 +26,7 @@
 
     <RelativeLayout
         android:layout_width="0dp"
-        android:layout_height="70dp"
+        android:layout_height="match_parent"
         android:layout_weight="8"
         android:padding="10dp">
 
@@ -34,15 +34,16 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Secret"
-            android:id="@+id/secret"
-            android:layout_centerVertical="true" />
+            android:id="@+id/message"
+            android:layout_centerVertical="true"
+            android:layout_alignParentTop="true" />
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Lakmal"
             android:id="@+id/sender"
             android:layout_centerVertical="true"
-            android:layout_below="@+id/secret" />
+            android:layout_below="@+id/message" />
 
 
     </RelativeLayout>
