--- a/app/src/main/res/layout/home_action_bar.xml
+++ b/app/src/main/res/layout/home_action_bar.xml
@@ -12,7 +12,7 @@
         android:layout_alignParentLeft="true"
         android:adjustViewBounds="true"
         android:scaleType="fitXY"
-        android:layout_marginLeft="0dp"
+        android:layout_marginLeft="10dp"
         android:layout_marginRight="15dp"
         android:layout_marginTop="5dp" />
 
@@ -20,39 +20,20 @@
     <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="30dp"
-        android:layout_toLeftOf="@+id/user_image"
         android:layout_marginTop="10dp"
-        android:layout_marginRight="10dp">
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Welcome,"
-        android:textColor="@color/white"
-        android:id="@+id/textView9"
-        android:textSize="9dp" />
-    <TextView
+        android:layout_marginRight="15dp"
+        android:layout_alignParentRight="true">
+
+        <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Lakmal"
         android:id="@+id/user_name"
-        android:textColor="@color/white"
-        android:layout_below="@+id/textView9"
+        android:textColor="@color/android_green"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:textSize="11dp" />
+        android:textSize="14dp" />
     </RelativeLayout>
 
-
-    <com.github.siyamed.shapeimageview.CircularImageView
-        android:layout_height="30dp"
-        android:layout_width="30dp"
-        android:id="@+id/user_image"
-        android:src="@drawable/default_user"
-        android:layout_alignParentRight="true"
-        android:adjustViewBounds="true"
-        android:scaleType="fitXY"
-        android:layout_marginRight="15dp"
-        android:layout_marginTop="10dp"
-        android:padding="8dp" />
 
 </RelativeLayout>
