--- a/app/src/main/res/layout/my_photo_layout.xml
+++ b/app/src/main/res/layout/my_photo_layout.xml
@@ -16,17 +16,18 @@
 
         <RelativeLayout
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="330dp"
             android:id="@+id/message_container"
             android:padding="5dp"
             android:background="@color/my_message_background"
-            android:layout_alignParentStart="true">
+            android:layout_alignParentStart="false">
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/my_image"
                 android:gravity="left"
-                android:src="@drawable/refresh"/>
+                android:src="@drawable/default_user"
+                android:scaleType="centerCrop" />
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
