--- a/app/src/main/res/layout/rahas_image_row_layout.xml
+++ b/app/src/main/res/layout/rahas_image_row_layout.xml
@@ -37,7 +37,8 @@
             android:src="@drawable/default_user"
             android:layout_alignParentStart="true"
             android:layout_alignParentLeft="false"
-            android:layout_alignParentEnd="false" />
+            android:layout_alignParentEnd="false"
+            android:scaleType="centerCrop" />
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
