--- a/app/src/main/res/drawable/chat_message_btn_disabled.xml
+++ b/app/src/main/res/drawable/chat_message_btn_disabled.xml
@@ -1,9 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
+    <solid android:color="#FFF"/>
 
-    <gradient
-        android:angle="90"
-        android:endColor="#e8e8e8"
-        android:startColor="#505050"
-        android:type="linear" />
 </shape>
