--- a/app/src/main/res/layout/registration_activity.xml
+++ b/app/src/main/res/layout/registration_activity.xml
@@ -1,18 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<ScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical"
+    android:id="@+id/scrollview"
+    android:layout_height="fill_parent"
+    android:layout_width="fill_parent"
+    android:isScrollContainer="true"
+    android:fillViewport="true"
+    android:background="@color/white">
+<RelativeLayout
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="com.score.chatz.ui.AddUserActivity"
-    android:background="@color/android_grey">
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
+    android:background="@color/white">
 
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/registering_user_id"
         android:hint="@string/register_user_id"
-        android:textColor="@color/white"
-        android:textColorHint="@color/lightg"
+        android:textColor="@color/android_grey"
+        android:textColorHint="@color/android_green"
         android:textSize="30sp"
         android:singleLine="false"
         android:layout_centerVertical="true"
@@ -32,7 +40,8 @@
         android:layout_alignLeft="@+id/welcome_text"
         android:layout_marginTop="34dp"
         android:layout_alignRight="@+id/welcome_text"
-        android:layout_alignParentBottom="false" />
+        android:layout_alignParentBottom="false"
+        android:layout_marginBottom="200dp" />
 
     <TextView
         android:layout_width="match_parent"
@@ -40,15 +49,16 @@
         android:text="@string/register_welcome_text"
         android:id="@+id/welcome_text"
         android:textSize="28sp"
-        android:textColor="@color/white"
+        android:textColor="@color/android_grey"
         android:layout_alignParentTop="false"
         android:layout_marginTop="61dp"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
         android:layout_alignParentLeft="false"
         android:layout_alignParentEnd="false"
-        android:gravity="center_horizontal" />
+        android:gravity="center_horizontal"
+        android:textStyle="bold" />
 
 
 </RelativeLayout>
-
+</ScrollView>
