--- a/app/src/main/res/layout/add_user_activity.xml
+++ b/app/src/main/res/layout/add_user_activity.xml
@@ -21,7 +21,7 @@
         android:textColor="@color/android_grey"
         android:textColorHint="@color/android_green"
         android:textSize="25sp"
-        android:singleLine="false"
+        android:singleLine="true"
         android:layout_centerVertical="true"
         android:layout_alignLeft="@+id/textView"
         android:layout_alignStart="@+id/textView"
