--- a/app/src/main/res/layout/my_photo_layout.xml
+++ b/app/src/main/res/layout/my_photo_layout.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<!--<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:orientation="vertical"
@@ -16,14 +16,14 @@
 
         <RelativeLayout
             android:layout_width="wrap_content"
-            android:layout_height="330dp"
+            android:layout_height="wrap_content"
             android:id="@+id/message_container"
             android:padding="5dp"
             android:background="@color/my_message_background"
             android:layout_alignParentStart="false">
             <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="200dp"
+                android:layout_height="200dp"
                 android:id="@+id/my_image"
                 android:gravity="left"
                 android:src="@drawable/default_user"
@@ -49,4 +49,53 @@
         </RelativeLayout>
 
     </RelativeLayout>
-</RelativeLayout>
+</RelativeLayout>-->
+
+
+
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+android:layout_width="fill_parent"
+android:layout_height="fill_parent"
+android:orientation="horizontal"
+android:background="@color/white"
+android:gravity="right">
+<FrameLayout
+    android:layout_width="10dp"
+    android:layout_height="match_parent"
+    android:background="@color/android_green"
+    android:layout_margin="5dp"></FrameLayout>
+<FrameLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:layout_marginTop="5dp"
+    android:layout_marginRight="5dp"
+    android:layout_marginBottom="5dp">
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/message_container"
+        android:padding="5dp"
+        android:layout_alignParentStart="false">
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/my_image"
+            android:gravity="left"
+            android:src="@drawable/default_user"
+            android:scaleType="centerCrop" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Lakmal Caldera"
+            android:id="@+id/sender"
+            android:layout_alignParentEnd="false"
+            android:layout_alignParentBottom="false"
+            android:textColor="@color/black"
+            android:layout_below="@+id/my_image"
+            android:textStyle="italic"
+            android:textSize="12sp"
+            android:gravity="left"
+            android:layout_alignLeft="@+id/my_image" />
+    </RelativeLayout>
+</FrameLayout>
+</LinearLayout>
