--- a/app/src/main/res/layout/not_my_message_layout.xml
+++ b/app/src/main/res/layout/not_my_message_layout.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<!--<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
@@ -71,4 +71,53 @@
         </RelativeLayout>
 
     </RelativeLayout>
-</RelativeLayout>
+</RelativeLayout>-->
+
+
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:orientation="horizontal"
+    android:background="@color/white"
+    android:gravity="right">
+    <FrameLayout
+        android:layout_width="10dp"
+        android:layout_height="match_parent"
+        android:background="@color/android_grey"
+        android:layout_margin="5dp"></FrameLayout>
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="5dp"
+        android:layout_marginRight="5dp"
+        android:layout_marginBottom="5dp">
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/message_container"
+            android:padding="10dp"
+            android:layout_alignParentStart="true">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Hi This is a message"
+                android:textColor="@color/black"
+                android:id="@+id/message"
+                android:textSize="15dp"
+                android:gravity="left" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Lakmal Caldera"
+                android:id="@+id/sender"
+                android:layout_alignParentEnd="false"
+                android:layout_alignParentBottom="false"
+                android:textColor="@color/black"
+                android:layout_below="@+id/message"
+                android:textStyle="italic"
+                android:textSize="12dp"
+                android:layout_alignLeft="@+id/message" />
+
+        </RelativeLayout>
+    </FrameLayout>
+</LinearLayout>
