--- a/app/src/main/res/layout/not_my_photo_layout.xml
+++ b/app/src/main/res/layout/not_my_photo_layout.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<!--<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:orientation="vertical"
@@ -18,20 +18,20 @@
 
         <RelativeLayout
             android:layout_width="wrap_content"
-            android:layout_height="300dp"
+            android:layout_height="wrap_content"
             android:id="@+id/message_container"
             android:padding="5dp"
             android:background="@color/not_my_message_background"
             android:layout_alignParentEnd="false">
             <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="200dp"
+                android:layout_height="200dp"
                 android:id="@+id/not_my_image"
                 android:src="@drawable/refresh"
                 android:layout_alignParentEnd="false"
                 android:layout_alignParentStart="false"
                 android:foregroundGravity="center_vertical"
-                android:scaleType="centerCrop" />
+                android:scaleType="center" />
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -74,4 +74,56 @@
         </RelativeLayout>
 
     </RelativeLayout>
-</RelativeLayout>
+</RelativeLayout>-->
+
+
+
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+android:layout_width="fill_parent"
+android:layout_height="fill_parent"
+android:orientation="horizontal"
+android:background="@color/white"
+android:gravity="right">
+<FrameLayout
+    android:layout_width="10dp"
+    android:layout_height="match_parent"
+    android:background="@color/android_grey"
+    android:layout_margin="5dp"></FrameLayout>
+<FrameLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:layout_marginTop="5dp"
+    android:layout_marginRight="5dp"
+    android:layout_marginBottom="5dp">
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/message_container"
+        android:padding="5dp"
+        android:layout_alignParentEnd="false"
+        android:layout_alignParentLeft="false">
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/not_my_image"
+            android:layout_alignParentEnd="false"
+            android:layout_alignParentStart="false"
+            android:foregroundGravity="center_vertical"
+            android:scaleType="center"
+            android:background="@drawable/default_user" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Lakmal Caldera"
+            android:id="@+id/sender"
+            android:layout_alignParentEnd="false"
+            android:layout_alignParentBottom="false"
+            android:textColor="@color/black"
+            android:layout_below="@+id/not_my_image"
+            android:textStyle="italic"
+            android:textSize="12sp"
+            android:layout_alignLeft="@+id/not_my_image" />
+
+    </RelativeLayout>
+</FrameLayout>
+</LinearLayout>
