new image layout for chat

--- a/app/src/main/res/layout/my_photo_layout.xml
+++ b/app/src/main/res/layout/my_photo_layout.xml
@@ -76,13 +76,19 @@ android:gravity="right">
         android:id="@+id/message_container"
         android:padding="5dp"
         android:layout_alignParentStart="false">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/my_image"
             android:gravity="left"
             android:src="@drawable/default_user"
-            android:scaleType="centerCrop" />
+            android:scaleType="centerCrop"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentLeft="true" />
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -91,11 +97,11 @@ android:gravity="right">
             android:layout_alignParentEnd="false"
             android:layout_alignParentBottom="false"
             android:textColor="@color/black"
-            android:layout_below="@+id/my_image"
             android:textStyle="italic"
             android:textSize="12sp"
-            android:gravity="left"
-            android:layout_alignLeft="@+id/my_image" />
+            android:layout_alignLeft="@+id/my_image"
+            android:layout_below="@+id/my_image" />
+        </LinearLayout>
     </RelativeLayout>
 </FrameLayout>
 </LinearLayout>
