--- a/app/src/main/res/layout/not_my_photo_layout.xml
+++ b/app/src/main/res/layout/not_my_photo_layout.xml
@@ -116,7 +116,7 @@
 
                     <ImageView
                         android:id="@+id/not_my_image"
-                        android:layout_width="wrap_content"
+                        android:layout_width="200dp"
                         android:layout_height="wrap_content"
                         android:src="@drawable/default_user"
                         android:adjustViewBounds="true"
@@ -124,7 +124,7 @@
                         android:layout_alignParentLeft="true"
                         android:layout_alignParentStart="true"
                         android:background="@drawable/image_border"
-                        android:scaleType="centerInside" />
+                        android:scaleType="centerCrop" />
                 <!--</LinearLayout>-->
 
                 <FrameLayout
